# deep-learning-papers-implementation

./: ._ZFNet  .gitmodules
AlexNet/: .gitignore  models.py  train.py
Attention/: attention.py  test.py
CycleGAN/: .gitignore  model.py
DCGAN/: model.py
Interleaved-Head-Attention/: README.md  pyproject.toml
Interleaved-Head-Attention/interleaved_head_attention/: __init__.py  attention.py  config.py
Interleaved-Head-Attention/tests/: test_attention.py
Nanochat/: reame.md
Nanochat/nanochat/: LICENSE  README.md  checkpoint_manager.py  dataloader.py  dataset.py  engine.py  flash_attention.py  fp8.py  gpt.py  optim.py  pyproject.toml
Nanochat/nanochat/dev/: LEADERBOARD.md  LOG.md  estimate_gpt3_core.ipynb  gen_synthetic_data.py  generate_logo.html  repackage_data_reference.py  scaling_analysis.ipynb
Nanochat/nanochat/nanochat/: checkpoint_manager.py  common.py  core_eval.py  dataloader.py  dataset.py  engine.py  execution.py  flash_attention.py  fp8.py  gpt.py  loss_eval.py  optim.py  report.py  tokenizer.py  ui.html
Nanochat/nanochat/runs/: miniseries.sh  quick_base_checkpoint.sh  runcpu.sh  scaling_laws.sh  speedrun.sh
Nanochat/nanochat/scripts/: base_eval.py  base_train.py  chat_cli.py  chat_eval.py  chat_rl.py  chat_sft.py  chat_web.py  pull_hf_checkpoint.py  tok_eval.py  tok_train.py
Nanochat/nanochat/tasks/: arc.py  common.py  customjson.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py  spellingbee.py
Nanochat/nanochat/tests/: test_attention_fallback.py  test_engine.py
Nanochat/scripts/: base_train.py
Qwen3.5/: IMPLEMENT.md  attention.py  cache.py  config.py  decoder.py  delta.py  fig.py  generate.py  loader.py  mask.py  mlp.py  mode.py  model.py  modeling.py  modular.py  norm.py  rope.py  run.py  utils.py  validate.py
Qwen3.5/exercise/: exercise1.py  exercise10.py  exercise11.py  exercise12.py  exercise13.py  exercise14.py  exercise15.py  exercise16.py  exercise17.py  exercise18.py  exercise19.py  exercise2.py  exercise3.py  exercise4.py  exercise5.py  exercise6.py  exercise7.py  exercise8.py  exercise9.py
Text-Diffusion/: .gitignore  BENCHMARKS.md  BLOG.md  IMPLEMENT.md  core_eval.py  dflash_model.py  eval_core.py  experiment.py  experiment_tracker.py  flash_attention.py  modal_nanochat.py  modal_train.py  model.py  nanochat_optim.py  pretokenize.py  pyproject.toml  sample.py  spec_decode.py  speed_run.sh  tokenizer.py  train.py  utils.py
Text-Diffusion/exercise/: one.py  two.py
Text-Diffusion/scripts/: plot_core_and_bpb.py  plot_core_evals.py  plot_core_vs_steps.py  plot_leaderboards.py
Transformers/: model.py
Wav2Lip/: model.py
ZFNet/: ._.gitignore  ._checkpoints  ._evaluation.py  ._model.py  ._preprocessing.py  ._train.py  Radme.md  Readme.md  Readme.txt  evaluation.py  model.py  train.py
tinyGroot/: BLOG.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  chat_infer.py  chat_sft.py  core_eval.py  dflash_model.py  eval_core.py  modal_chat_sft.py  modal_train.py  model.py  nanochat_optim.py  pyproject.toml  sample.py  sft_chat.py  sft_data.py  spec_decode.py  speed_run.sh  speedrun_mps.sh  train.py  utils.py
tinyGroot/examples/: 01_pretrain_tiny.sh  02_sample.sh  README.md
tinyGroot/infer/: chat_infer.py  sample.py  spec_decode.py
tinyGroot/local_chat_deploy/: README.md  server.py
tinyGroot/local_chat_deploy/static/: app.js  index.html  styles.css
tinyGroot/modal/: modal_chat_sft.py  modal_train.py
tinyGroot/rl_envs/: README.md  __init__.py  mmlu_rl.py  modal_run.py  train_mmlu_rl.sh
tinyGroot/scripts/: plot_core_evals.py  plot_leaderboards.py
tinyGroot/tinygroot/: __init__.py  cache_management.py  chat_core_eval.py  core_eval.py  dflash_model.py  distill_gsm8k.py  distill_gsm8k_vllm.py  engine.py  eval.py  eval_core.py  exp_naming.py  flash_attention.py  fp8.py  hf_upload.py  model.py  sft_chat.py  sft_data.py  utils.py
tinyGroot/tinygroot/infer/: __init__.py  chat_infer.py  sample.py  spec_decode.py
tinyGroot/tinygroot/modal/: __init__.py  modal_chat_sft.py  modal_train.py
tinyGroot/tinygroot/training/: __init__.py  chat_rl.py  chat_sft.py  pretokenize.py  train.py
tinyGroot/training/: chat_sft.py  train.py
tinytext/: chat_core_eval.py  chat_sft.py  dflash_model.py  modal_chat_sft.py  pyproject.toml  train.py
