[project]
name = "text-diffusion"
version = "0.1.0"
description = "Small LLaDA-style text diffusion training implementation."
readme = "IMPLEMENT.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "huggingface-hub>=0.24",
    "modal>=1.1",
    "muon-optimizer>=0.1.0",
    "numpy>=1.26",
    "pyarrow>=15",
    "safetensors>=0.4",
    "setuptools>=70",
    "tokenizers>=0.19",
    "torch>=2.5",
    "transformers>=4.44",
    "wandb>=0.17",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
