[project]
name = "tinygroot"
version = "0.1.0"
description = "Text MTP training and speculative decoding experiments."
readme = "BLOG.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "datasets>=2.20",
    "huggingface-hub>=0.24",
    "kernels>=0.11",
    "modal>=1.1",
    "numpy>=1.26",
    "pyarrow>=15",
    "pyyaml>=6",
    "safetensors>=0.4",
    "setuptools>=70",
    "tokenizers>=0.19",
    "torch>=2.5",
    "transformers>=4.44",
    "wandb>=0.17",
]

[project.scripts]
tinygroot-chat-infer = "tinygroot.infer.chat_infer:main"
tinygroot-sample = "tinygroot.infer.sample:main"
tinygroot-spec-decode = "tinygroot.infer.spec_decode:main"
tinygroot-train = "tinygroot.training.train:main"
tinygroot-chat-sft = "tinygroot.training.chat_sft:main"
tinygroot-chat-rl = "tinygroot.training.chat_rl:main"
tinygroot-pretokenize = "tinygroot.training.pretokenize:main"
tinygroot-eval-core = "tinygroot.eval_core:main"
tinygroot-hf-upload = "tinygroot.hf_upload:main"

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tinygroot*"]

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
